--- a/ChallengesTests/ChallengesTests.csproj
+++ b/ChallengesTests/ChallengesTests.csproj
@@ -52,14 +52,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestFiles\13_RemoveCharacters\13_RemoveCharactersTest.cs" />
     <Compile Include="TestFiles\19_BigPositions\19_BigPositions.cs" />
+    <Compile Include="TestFiles\20_LowerCase\20LowercaseTest.cs" />
     <Compile Include="TestFiles\37_Pangrams\37_Pangram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestFiles\8_ReverseWords\8_ReverseWordsTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="TestFiles\13_RemoveCharacters\Solution.txt" />
     <Content Include="TestFiles\19_BigPositions\Files.txt" />
     <Content Include="TestFiles\19_BigPositions\Solution.txt" />
     <Content Include="TestFiles\37_Pangrams\Solution.txt" />
+    <Content Include="TestFiles\8_ReverseWords\Solution.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodeevalChallenges\CodeevalChallenges.csproj">
@@ -67,9 +72,7 @@
       <Name>CodeevalChallenges</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestFiles\13_RemoveCharacters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
