Correcion de rutas relativas

--- a/ChallengesTests/ChallengesTests.csproj
+++ b/ChallengesTests/ChallengesTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="TestFiles\13_RemoveCharacters\13_RemoveCharactersTest.cs" />
     <Compile Include="TestFiles\19_BigPositions\19_BigPositions.cs" />
     <Compile Include="TestFiles\20_LowerCase\20LowercaseTest.cs" />
+    <Compile Include="TestFiles\26_FileSize\26_FileSizeTest.cs" />
     <Compile Include="TestFiles\37_Pangrams\37_Pangram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestFiles\8_ReverseWords\8_ReverseWordsTest.cs" />
@@ -63,6 +64,9 @@
     <Content Include="TestFiles\13_RemoveCharacters\Solution.txt" />
     <Content Include="TestFiles\19_BigPositions\Files.txt" />
     <Content Include="TestFiles\19_BigPositions\Solution.txt" />
+    <Content Include="TestFiles\20_LowerCase\Solution.txt" />
+    <Content Include="TestFiles\26_FileSize\Solution.txt" />
+    <Content Include="TestFiles\26_FileSize\testFile.txt" />
     <Content Include="TestFiles\37_Pangrams\Solution.txt" />
     <Content Include="TestFiles\8_ReverseWords\Solution.txt" />
   </ItemGroup>
