--- a/CodeevalChallenges/CodeevalChallenges.csproj
+++ b/CodeevalChallenges/CodeevalChallenges.csproj
@@ -46,6 +46,7 @@
     <Compile Include="13_RemoveCharacters.cs" />
     <Compile Include="19_BigPositions.cs" />
     <Compile Include="20_Lowercase.cs" />
+    <Compile Include="26_FileSize.cs" />
     <Compile Include="37_Pangrams.cs" />
     <Compile Include="8_ReverseWords.cs" />
     <Compile Include="Program.cs" />
